Added random flight endpoint
